# eindfeest

./: README.md  pyproject.toml
src/solarcell/: designer.py  graph.ui  solarcell_gui.py  solarcell_model.py  solarcell_view.py  solcarcell_controller.py
