[tool.poetry]
name = "eindfeest"
version = "0.1.0"
description = ""
authors = ["mustafa9812 <135598930+mustafa9812@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nupy = "^0.1.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
