[tool.poetry]
name = "solarcell"
version = "0.1.0"
description = ""
authors = ["mustafa9812 <135598930+mustafa9812@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nupy = "^0.1.1"
click = "^8.1.7"
matplotlib = "^3.8.2"
pyvisa = "^1.14.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "eindfeest.solarcell_view:cmd_group"
