[tool.poetry]
name = "solarcell"
version = "0.1.0"
description = ""
authors = ["mustafa9812 <135598930+mustafa9812@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nupy = "^0.1.1"
click = "^8.1.7"
matplotlib = "^3.8.2"
pyvisa = "^1.14.1"
numpy = "^1.26.2"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"
pyqtgraph = "^0.13.3"
pyside6 = "^6.6.1"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "eindfeest.solarcell_view:cmd_group"

[tool.poe.tasks.design]
shell = """
pyside6-uic src/solarcell/graph.ui -o src/solarcell/designer.py
"""
interpreter = ["posix", "powershell"]

